--- a/manifest.json
+++ b/manifest.json
@@ -26,8 +26,8 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#2a2a79",
-  "background_color": "#f3f3f3",
+  "theme_color": "ddbdfc",
+  "background_color": "faf9f9",
   "orientation": "portrait",
   "scope": "/"
 }
